LuccaUI/AppLayout [FIX] Fixes main nav if 'stuck' is used

--- a/src/plugins/lucca-app-layout/components/_navigation.less
+++ b/src/plugins/lucca-app-layout/components/_navigation.less
@@ -97,7 +97,7 @@
 #main-navigation {
 	.lui_screens_smaller_than(tablet, {
 		background: transparent;
-		position: relative;
+		position: relative !important;
 		left: 0; right: 0; bottom: auto;
 		z-index: 100;
 		width: 100%; max-height: 100vh; overflow: auto;
